fixed a bug with horizontal scroll.

--- a/public/t-style.css
+++ b/public/t-style.css
@@ -15,6 +15,7 @@ body {
   position: absolute;
   top: 0; bottom: 0; left: 0; right: 0;
   /*align-items: center;*/
+  overflow-x: hidden;
 }
 
 .background-content{
